--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout 
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/row_layout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <ImageView android:id="@+id/icon"
-        android:layout_width="160dip"
+        
+  <TextView android:id="@+id/list_text"
+        android:layout_width="260dip"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_datasource"/>
-    
-</LinearLayout>
+        android:text="textview"
+        android:textColor="#ffffff"
+        android:layout_gravity="left" 
+        android:textSize="22sp" 
+        android:layout_alignParentLeft="true"/>
+
+    <ImageView android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+		android:layout_gravity="right"  
+        android:src="@drawable/icon_edit" 
+        android:layout_alignParentRight="true"
+        />
+        
+</RelativeLayout>
 
