--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,16 +6,25 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-        
+  
   <TextView android:id="@+id/list_text"
         android:layout_width="260dip"
         android:layout_height="wrap_content"
         android:text="textview"
         android:textColor="#ffffff"
-        android:layout_gravity="left" 
+        android:layout_gravity="top" 
         android:textSize="22sp" 
         android:layout_alignParentLeft="true"/>
 
+ <TextView android:id="@+id/description_text"
+        android:layout_width="260dip"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:layout_gravity="bottom" 
+        android:textSize="11sp" 
+        android:text="no changes"
+        android:layout_alignParentLeft="true"/>
+        
     <ImageView android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
