--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
     >
   
   <TextView android:id="@+id/list_text"
-        android:layout_width="260dip"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="textview"
         android:textColor="#ffffff"
@@ -29,8 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
 		android:layout_gravity="right"  
-        android:src="@drawable/icon_edit" 
-        android:layout_alignParentRight="true"
+		android:src="@drawable/icon_edit"
+		android:layout_alignParentRight="true"
         />
         
 </RelativeLayout>
