--- a/res/layout/splashscreen.xml
+++ b/res/layout/splashscreen.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/arena" />
+        android:src="@drawable/ic_launcher" />
     
 </RelativeLayout>
