Added splashscreen plugins support. Rearranged plugin categories: Bootstrap phase 1 (Splashscreen), Bootstrap phase 2, Dataselector and Marker. Added a splashscreen plugin

--- a/plugins/mixare-arena-splashscreen-plugin/res/layout/main.xml
+++ b/plugins/mixare-arena-splashscreen-plugin/res/layout/main.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/logo" />
+        android:src="@drawable/arena" />
     
 </RelativeLayout>
