--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -7,11 +7,14 @@
 	<string-array name="displaytypelist">
 		<item>@string/CIRCLE_MARKER</item>
 		<item>@string/NAVIGATION_MARKER</item>
+		<item>@string/IMAGE_MARKER</item>
 	</string-array>
+	<!-- 	name | url | typeEnum | displayEnum | isDefaultenabled -->
 	<string-array name="defaultdatasources">
 	    <item>Wikipedia|http://ws.geonames.org/findNearbyWikipediaJSON|0|0|true</item>
 	    <item>Twitter|http://search.twitter.com/search.json|2|0|true</item>
 	    <item>OpenStreetmap|http://open.mapquestapi.com/xapi/api/0.6/node[railway=station]|3|1|true</item>
 	    <item>Own URL|http://mixare.org/geotest.php|4|0|false</item>
+	    <item>Panoramio|http://www.panoramio.com/map/get_panoramas.php|6|0|false</item>
 	</string-array>
 </resources>
